Fix first photo in Fotorama in wrong position.

--- a/htdocs/storage/themes/birdwatcher/styles/styles.styl
+++ b/htdocs/storage/themes/birdwatcher/styles/styles.styl
@@ -267,7 +267,7 @@ lightbox-button-glow() {
 		background-repeat:no-repeat;
 		background-position:center center;
 		background-size:contain;
-		.is-activated & {
+		.is-ok & {
 			background:none !important;
 		}
 	}
